fix: use Path.of instead of Paths.get to resolve compilation error on Docker build